[package]
name = "crusmax"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["http1", "http2", "server"] }
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
http-body-util = "0.1.0-rc.3"
tokio = { version = "1.33.0", features = ["full"] }

rustls = "0.21.7"
syslog = "6.1.0"
log = { version = "0.4.20", features = ["kv_unstable"] }
